--- a/index.html
+++ b/index.html
@@ -1,28 +1,15 @@
-let cor;
-let posicaoHorizontal // x
-let posicaoVertical //y
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/addons/p5.sound.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
 
-function setup() {
-  random(0,200)
-  createCanvas(400, 400);
-  background("#704FACC6")
-  cor = color(random(0,50),random(0,200), random(0,250));
-  posicaoHorizontal = 200;
-  posicaoVertical = 200;
-}
-
-function draw() {
-
-  fill(cor);
-  circle(posicaoHorizontal, posicaoVertical, 50);
-  
-  if(mouseX < posicaoHorizontal) {
-    posicaoHorizontal = posicaoHorizontal - 1;
-  }
-   
-  if(mouseX > posicaoHorizontal) {
-   posicaoHorizontaL = posicaoHorizontal + 1;
-  }
-  
-}
-  
+  </head>
+  <body>
+    <main>
+    </main>
+    <script src="sketch.js"></script>
+  </body>
+</html>
